--- a/download_text_files.ipynb
+++ b/download_text_files.ipynb
@@ -5,12 +5,23 @@
    "id": "b935c35e-ff42-4f71-8889-de11922d2b28",
    "metadata": {},
    "source": [
-    "## Setup"
+    "# Download Text Files\n",
+    "\n",
+    "In this notebook, we download the latest 10-K of 2022 for each of the firms of the S&P500.  The list of S&P500 tickers and CIKs is gathered from Wikipedia.  All 10-Ks are gathered from SEC EDGAR using `sec_edgar_downloader` with the company's ticker.  Any mistaken files are redownloaded using their CIK as a more robust identifier."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a89a8af-f9ca-4cd5-aa00-3122dddccc27",
+   "metadata": {},
+   "source": [
+    "## Setup\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "id": "3bdb7b14-d12e-47d0-912a-207970be9ddf",
    "metadata": {},
    "outputs": [],
@@ -18,8 +29,6 @@
     "import glob\n",
     "import os\n",
     "import warnings\n",
-    "import sys\n",
-    "import traceback\n",
     "import re\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -36,42 +45,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9bd0636-0639-4ae2-8e3e-2dea4d3d9da2",
-   "metadata": {},
-   "source": [
-    "## Download each 10-K"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "29589560-9e23-4691-b078-2c64fe630338",
    "metadata": {},
    "source": [
-    "### List Tickers\n",
+    "## List Tickers\n",
     "\n",
-    "List each S&P500 ticker on Wikipedia.  If the list already exists, we skip the download."
+    "Below, we gather the list of each S&P500 firm from Wikipedia.  If the list already exists in the inputs folder, we skip the download."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "id": "c3339d9d-a569-45ee-8004-159f9b4b5da6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sp500_path = \"inputs/s&p500_2022.csv\"\n",
-    "\n",
-    "if not os.path.exists(sp500_path):\n",
-    "    url = \"https://en.wikipedia.org/wiki/List_of_S%26P_500_companies\"\n",
-    "    pd.read_html(url)[0].to_csv(sp500_path, index=False)  # [1] shows updates\n",
-    "\n",
-    "sp500 = pd.read_csv(sp500_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "3372eb65-d73e-41d9-86f4-eebab54128cf",
    "metadata": {},
    "outputs": [
     {
@@ -103,6 +88,7 @@
        "      <th>Date added</th>\n",
        "      <th>CIK</th>\n",
        "      <th>Founded</th>\n",
+       "      <th>truth_path</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -116,6 +102,7 @@
        "      <td>1957-03-04</td>\n",
        "      <td>66740</td>\n",
        "      <td>1902</td>\n",
+       "      <td>MMM</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -127,6 +114,7 @@
        "      <td>2017-07-26</td>\n",
        "      <td>91142</td>\n",
        "      <td>1916</td>\n",
+       "      <td>AOS</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -138,6 +126,7 @@
        "      <td>1957-03-04</td>\n",
        "      <td>1800</td>\n",
        "      <td>1888</td>\n",
+       "      <td>ABT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -149,6 +138,7 @@
        "      <td>2012-12-31</td>\n",
        "      <td>1551152</td>\n",
        "      <td>2013 (1888)</td>\n",
+       "      <td>ABBV</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -160,9 +150,11 @@
        "      <td>2011-07-06</td>\n",
        "      <td>1467373</td>\n",
        "      <td>1989</td>\n",
+       "      <td>ACN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -182,6 +174,7 @@
        "      <td>1997-10-06</td>\n",
        "      <td>1041061</td>\n",
        "      <td>1997</td>\n",
+       "      <td>YUM</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>499</th>\n",
@@ -193,6 +186,7 @@
        "      <td>2019-12-23</td>\n",
        "      <td>877212</td>\n",
        "      <td>1969</td>\n",
+       "      <td>ZBRA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>500</th>\n",
@@ -204,6 +198,7 @@
        "      <td>2001-08-07</td>\n",
        "      <td>1136869</td>\n",
        "      <td>1927</td>\n",
+       "      <td>ZBH</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>501</th>\n",
@@ -215,6 +210,7 @@
        "      <td>2001-06-22</td>\n",
        "      <td>109380</td>\n",
        "      <td>1873</td>\n",
+       "      <td>0000109380</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>502</th>\n",
@@ -226,10 +222,11 @@
        "      <td>2013-06-21</td>\n",
        "      <td>1555280</td>\n",
        "      <td>1952</td>\n",
+       "      <td>ZTS</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>503 rows × 8 columns</p>\n",
+       "<p>503 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -259,28 +256,35 @@
        "501                      Regional Banks     Salt Lake City, Utah  2001-06-22   \n",
        "502                     Pharmaceuticals   Parsippany, New Jersey  2013-06-21   \n",
        "\n",
-       "         CIK      Founded  \n",
-       "0      66740         1902  \n",
-       "1      91142         1916  \n",
-       "2       1800         1888  \n",
-       "3    1551152  2013 (1888)  \n",
-       "4    1467373         1989  \n",
-       "..       ...          ...  \n",
-       "498  1041061         1997  \n",
-       "499   877212         1969  \n",
-       "500  1136869         1927  \n",
-       "501   109380         1873  \n",
-       "502  1555280         1952  \n",
+       "         CIK      Founded  truth_path  \n",
+       "0      66740         1902         MMM  \n",
+       "1      91142         1916         AOS  \n",
+       "2       1800         1888         ABT  \n",
+       "3    1551152  2013 (1888)        ABBV  \n",
+       "4    1467373         1989         ACN  \n",
+       "..       ...          ...         ...  \n",
+       "498  1041061         1997         YUM  \n",
+       "499   877212         1969        ZBRA  \n",
+       "500  1136869         1927         ZBH  \n",
+       "501   109380         1873  0000109380  \n",
+       "502  1555280         1952         ZTS  \n",
        "\n",
-       "[503 rows x 8 columns]"
+       "[503 rows x 9 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "sp500_path = \"inputs/s&p500_2022.csv\"\n",
+    "\n",
+    "if not os.path.exists(sp500_path):\n",
+    "    url = \"https://en.wikipedia.org/wiki/List_of_S%26P_500_companies\"\n",
+    "    pd.read_html(url)[0].to_csv(sp500_path, index=False)  # [1] shows updates\n",
+    "\n",
+    "sp500 = pd.read_csv(sp500_path)\n",
     "sp500"
    ]
   },
@@ -289,19 +293,21 @@
    "id": "59557238-a2a5-4275-a5ec-a0bdb70606aa",
    "metadata": {},
    "source": [
-    "### Download\n",
+    "## Download 10-Ks\n",
     "\n",
-    "Download the last 10-K files of 2022."
+    "In this step, we download the latest 10-K file of each firm in 2022.  We start by setting up variables that are consistent in each iteration of the loop, such as the most recent allowed download date, the number of files to download, and the type of files (10-K).  We also ensure directories are set up and usable.\n",
+    "\n",
+    "If files are already downloaded, we skip the download."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "da7de2f6-d42f-4bfc-907d-106a58b9c2c0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Set up changeable variables\n",
+    "# Set up downloader variables\n",
     "tics = sp500['Symbol'].to_list()\n",
     "before = '2023-01-01'\n",
     "res_path = '10K_files'\n",
@@ -315,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "abe34027-38b9-4676-a175-48e6df1d9851",
    "metadata": {},
    "outputs": [
@@ -323,7 +329,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████| 503/503 [00:01<00:00, 276.17it/s]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████████| 503/503 [00:02<00:00, 187.25it/s]\n"
      ]
     }
    ],
@@ -331,7 +337,7 @@
     "# Loop over each ticker\n",
     "for tic in tqdm(tics):\n",
     "    # Check if the files were already downloaded\n",
-    "    tic_res_path = rf'{res_path}\\sec-edgar-filings\\{tic}\\{download_type}'\n",
+    "    tic_res_path = fr'{res_path}/sec-edgar-filings/{tic}/{download_type}'\n",
     "    file_downloaded = (\n",
     "        os.path.exists(tic_res_path) and len(os.listdir(tic_res_path)) >= amount\n",
     "    )  # quick check\n",
@@ -351,33 +357,36 @@
    "id": "25eec497-d65f-4821-a809-9d6e4cb042ae",
    "metadata": {},
    "source": [
-    "### Check for Missing and Erroneous Filings\n",
+    "## Check for Missing and Erroneous Filings\n",
     "\n",
-    "Checking the first ticker, A, we find that the `sec_edgar_downloader` incorrectly downloaded ticker HEI.A (HEICO Corporation) instead of A (Agilent Technologies), along with many other mistaken tickers.  In this loop, we find the company name specified in the S&P500 table and compare it to the name found in the 10-K.\n",
+    "Checking the first ticker, A, we find that the `sec_edgar_downloader` incorrectly downloaded ticker HEI.A (HEICO Corporation) instead of A (Agilent Technologies).  In this loop, we find other companies whose names cannot be found in the 10-K.  We also note any tickers that are missing from the folder structure.\n",
     "\n",
-    "Also note that only 496 of the 503 expected folders are present.  For this reason, we should download these firms with the constant CIK value."
+    "Note that 496 of the 503 expected folders are present at the beginning of this loop.  For this reason, we should download these firms with the constant CIK value as their tickers are not available (or they are duplicates)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "ef662674-c0e7-4b23-b2f5-af0ed4e3ef40",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Replace misspellings in sp500 table\n",
-    "sp500.loc[sp500['Symbol'] == 'GWW', ['Security']] = 'W.W. Grainger'\n",
-    "sp500.loc[sp500['Symbol'] == 'COO', ['Security']] = 'The Cooper Companies, Inc.'\n",
-    "sp500.loc[sp500['Symbol'] == 'HSY', ['Security']] = 'The Hershey Company'\n",
-    "sp500.loc[sp500['Symbol'] == 'MCO', ['Security']] = \"Moody's Corporation\"    # TODO\n",
-    "sp500.loc[sp500['Symbol'] == 'ORLY', ['Security']] = \"O'Reilly Automotive, Inc.\"\n",
-    "sp500.loc[sp500['Symbol'] == 'PH', ['Security']] = 'Parker-Hannifin Corporation'\n",
-    "# TODO: General Motors?"
+    "try:\n",
+    "    sp500.loc[sp500['Symbol'] == 'GWW', ['Security']] = 'W.W. Grainger'\n",
+    "    sp500.loc[sp500['Symbol'] == 'COO', ['Security']] = 'The Cooper Companies, Inc.'\n",
+    "    sp500.loc[sp500['Symbol'] == 'HSY', ['Security']] = 'The Hershey Company'\n",
+    "    sp500.loc[sp500['Symbol'] == 'MCO', ['Security']] = \"Moody's Corporation\"\n",
+    "    sp500.loc[sp500['Symbol'] == 'ORLY', ['Security']] = \"O'Reilly Automotive, Inc.\"\n",
+    "    sp500.loc[sp500['Symbol'] == 'PH', ['Security']] = 'Parker-Hannifin Corporation'\n",
+    "except Exception as error:\n",
+    "    print('Warning: could not replace expected symbol names')\n",
+    "    print(repr(error))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "2d96214c-98d0-4b0d-86b9-01222384a70f",
    "metadata": {},
    "outputs": [
@@ -385,45 +394,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cannot find path of tickers:\n",
-      " {'GEHC', 'BRK.B', 'FRC', 'ELV', 'WBD', 'SBNY', 'BF.B'}\n",
-      "Cannot find company name in 10-K of  47  tickers:\n",
-      " {'BA', 'IP', 'WELL', 'ESS', 'IT', 'ICE', 'ON', 'D', 'MET', 'DRI', 'GEN', 'MCO', 'CAT', 'IPG', 'CB', 'FAST', 'O', 'BIO', 'PM', 'WY', 'NOW', 'IR', 'FE', 'SWK', 'CMG', 'MU', 'DE', 'META', 'A', 'L', 'WM', 'MS', 'NI', 'CF', 'ZION', 'PEAK', 'BK', 'F', 'TECH', 'KEY', 'GM', 'J', 'HST', 'ALL', 'RF', 'MA', 'C'}\n"
+      "Cannot find path for  7  tickers:\n",
+      " {'BF.B', 'WBD', 'BRK.B', 'GEHC', 'ELV', 'FRC', 'SBNY'}\n",
+      "\n",
+      "Cannot find company name in 10-Ks of  47  tickers:\n",
+      " {'WY', 'IP', 'DE', 'ALL', 'ON', 'PM', 'CAT', 'MU', 'C', 'GM', 'KEY', 'IPG', 'F', 'WELL', 'NOW', 'CF', 'CMG', 'MA', 'O', 'MCO', 'RF', 'FAST', 'ICE', 'MET', 'ZION', 'BK', 'FE', 'PEAK', 'MS', 'J', 'BA', 'GEN', 'CB', 'NI', 'BIO', 'IT', 'WM', 'ESS', 'IR', 'META', 'D', 'L', 'A', 'SWK', 'HST', 'DRI', 'TECH'}\n"
      ]
     }
    ],
    "source": [
-    "counter = 0\n",
+    "# Create sets to store the names of companies\n",
     "missing_path_tics = set()\n",
     "missing_content_tics = set()\n",
     "\n",
+    "# Loop over each ticker\n",
     "for tic in tics:\n",
-    "    tic_res_path = rf'{res_path}\\sec-edgar-filings\\{tic}\\{download_type}'\n",
+    "    tic_res_path = fr'{res_path}/sec-edgar-filings/{tic}/{download_type}'\n",
     "    \n",
+    "    # Check that a file exists at its expected file path\n",
     "    if not os.path.exists(tic_res_path):\n",
-    "        # print(f'\\tCannot find ticker {tic}')\n",
     "        missing_path_tics.add(tic)\n",
     "        continue\n",
     "    \n",
+    "    # Find any downloaded 10-Ks\n",
     "    for file in glob.glob(tic_res_path+'/*/*.html'):\n",
     "        with open(file, 'rb') as report_file:\n",
     "            html = report_file.read()\n",
     "        \n",
-    "        # Get approximate name\n",
+    "        # Get the approximate firm name\n",
     "        tic_name = sp500.loc[sp500['Symbol'] == tic]['Security'].values[0]\n",
     "        appx_tic = re.sub('\\s*&\\s*', '.+', tic_name)\n",
     "        appx_tic = re.sub('\\(.*\\)', '', appx_tic)\n",
     "        appx_tic = re.sub(r\"[^\\x00-\\x7F]|'\", '.', appx_tic)    # non ascii\n",
     "        appx_tic = re.sub('(,\\s*)?(Inc|Co)\\.', '', appx_tic).strip()\n",
     "        \n",
-    "        # Search in file\n",
+    "        # Search for the firm name in the file\n",
     "        if not re.search(appx_tic.encode('utf-8'), html, re.IGNORECASE):\n",
-    "            # print(f'Cannot find {appx_tic} in {tic}\\'s {download_type}')\n",
     "            missing_content_tics.add(tic)\n",
-    "            counter += 1\n",
     "\n",
-    "print(\"Cannot find path of tickers:\\n\", missing_path_tics)\n",
-    "print(\"Cannot find company name in 10-K of \", counter, \" tickers:\\n\", missing_content_tics)"
+    "print('Cannot find path for ', len(missing_path_tics), ' tickers:\\n', missing_path_tics)\n",
+    "print('\\nCannot find company name in 10-Ks of ', len(missing_content_tics), ' tickers:\\n', missing_content_tics)"
    ]
   },
   {
@@ -431,16 +441,16 @@
    "id": "27ffeebb-465a-4dae-9de4-6b9233738f05",
    "metadata": {},
    "source": [
-    "### Replace Missing and Erroneous Filings\n",
+    "## Replace Missing and Erroneous Filings\n",
     "\n",
-    "First, we download 10-Ks using the CIKs of firms that it failed on.\n",
+    "Now, we download 10-Ks using the CIKs of firms that were incorrect or not present in the initial download.\n",
     "\n",
     "Then, we add a column to the data indicating which path is the correct path for each ticker.  Alternatively, we could move these files to the expected ticker path."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "id": "ca5792c3-9dfa-4477-b5e0-3e6d928ba4f1",
    "metadata": {},
    "outputs": [
@@ -448,27 +458,27 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████████████| 54/54 [03:23<00:00,  3.76s/it]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████████| 54/54 [00:00<00:00, 54.32it/s]\n"
      ]
     }
    ],
    "source": [
-    "# Handle all failed 10-Ks\n",
+    "# Join all failed 10-Ks\n",
     "missing_all_tics = set()\n",
     "missing_all_tics.update(missing_path_tics)\n",
     "missing_all_tics.update(missing_content_tics)\n",
     "\n",
-    "# \n",
+    "# Download via CIK\n",
     "for tic in tqdm(missing_all_tics):\n",
     "    # Look up the CIK in the sp500 df\n",
     "    cik = sp500.loc[sp500['Symbol'] == tic, 'CIK'].item()\n",
+    "    cik_path = '{0:0>10}'.format(cik)    # All CIKs are 10 characters long on download\n",
     "    \n",
     "    # Download based on the CIK from EDGAR\n",
-    "    cik_res_path = rf'{res_path}\\sec-edgar-filings\\{cik}\\{download_type}'\n",
+    "    cik_res_path = fr'{res_path}/sec-edgar-filings/{cik_path}/{download_type}'\n",
     "    file_downloaded = (\n",
     "        os.path.exists(cik_res_path) and len(os.listdir(cik_res_path)) >= amount\n",
     "    )  # quick check\n",
-    "    \n",
     "    if not file_downloaded:\n",
     "        try:\n",
     "            dl.get(download_type, cik, before=before, amount=amount)\n",
@@ -482,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 8,
    "id": "c96ad5eb-cf01-425f-869c-70302250e8fa",
    "metadata": {},
    "outputs": [],
