--- a/build_sample.ipynb
+++ b/build_sample.ipynb
@@ -2,6 +2,23 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "51300186-a82a-4637-83d5-26c6467c1fa6",
+   "metadata": {},
+   "source": [
+    "# Build Sample\n",
+    "\n",
+    "After running *download_text_files.ipynb*, we can now build the sample of data to use in the analysis.  The main output of this file is *output/analysis_sample.csv* which includes the following:\n",
+    "1. 5 positive sentiment scores\n",
+    "1. 5 negative sentiment scores\n",
+    "1. a return variable from the day of the 10-K's release to two days following\n",
+    "1. a return variable from two days after the 10-K's release to ten days following \n",
+    "1. the 10-K's word count\n",
+    "1. the 10-K's unique word count\n",
+    "1. accounting variables from the CCM"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f9f53bea-fefb-478f-9ba0-640fe7437e3e",
    "metadata": {},
    "source": [
@@ -216,17 +233,9 @@
    "source": [
     "## Load 2022 returns\n",
     "\n",
-    "Because this step is not particularly costly, we "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "98f7279d-13d3-48b5-8d54-2bc08ba66f16",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# We load the DL only if the saved returns do not yet exist\n"
+    "Because this step is not costly compared to others, we gather the filing dates regardless of whether we have done so before.\n",
+    "\n",
+    "Once we have the filing dates, we extract only the 11 days following the announcement.  We then can compute returns for each period of days."
    ]
   },
   {
@@ -451,6 +460,7 @@
     "        sp500_rets.loc[i, 'filing_date'] = r.html.find('.info', first=True).text\n",
     "    except Exception as error:\n",
     "        print(f'Could not get filing date for ticker {tic}: {repr(error)}')\n",
+    "    sleep(0.1)\n",
     "\n",
     "sp500_rets"
    ]
@@ -793,7 +803,9 @@
    "id": "94ba1f68-1387-4217-9abc-e582e61f1a56",
    "metadata": {},
    "source": [
-    "## Clean 10-Ks"
+    "## Clean 10-Ks\n",
+    "\n",
+    "For each 10-K, we remove xml and html tags, extracting only the text.  We make the entire document lowercase and keep only words."
    ]
   },
   {
@@ -883,7 +895,9 @@
    "source": [
     "## Load sentiment dictionaries\n",
     "\n",
-    "TODO: justify that positive values as of 2021 are relevant."
+    "Now, we load the sentiment dictionaries.\n",
+    "\n",
+    "For the LM dictionary, we only keep positive values.  The dictionary was released in 2021, and the year that any word was added to the list is included as a positive value.  The year a word was removed from the list, it is included as a negative value.  Any negative values have been removed from the list during some release, so we should only keep the positive values."
    ]
   },
   {
@@ -918,9 +932,9 @@
    "id": "cbc85e2a-0ec6-4231-bafd-a00dc9c71ec1",
    "metadata": {},
    "source": [
-    "## Load each firm and add sentiment variables\n",
+    "## Generate sentiment regex\n",
     "\n",
-    "TODO: description"
+    "We start by gathering the sentiments into regex patterns.  We define a function to generate the NEAR_regex for each pair of two topics, and "
    ]
   },
   {
@@ -980,6 +994,16 @@
     "    ecom_positive_regex = NEAR_regex_helper(ecom_topic, ecom_positive)\n",
     "    bio_negative_regex = NEAR_regex_helper(bio_topic, bio_negative)\n",
     "    bio_positive_regex = NEAR_regex_helper(bio_topic, bio_positive)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "895ef2d5-3bbd-449a-be39-33743bf409f1",
+   "metadata": {},
+   "source": [
+    "## Load each firm and add sentiment variables\n",
+    "\n",
+    "TODO: "
    ]
   },
   {
