--- a/build_sample.ipynb
+++ b/build_sample.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "id": "51300186-a82a-4637-83d5-26c6467c1fa6",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Build Sample\n",
     "\n",
@@ -248,7 +250,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 39%|███████████████████████████████▎                                                | 197/503 [00:52<01:18,  3.91it/s]"
+      " 40%|███████████████████████████████▋                                                | 199/503 [00:42<00:46,  6.53it/s]"
      ]
     },
     {
@@ -262,7 +264,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 42%|█████████████████████████████████▉                                              | 213/503 [00:55<01:19,  3.64it/s]"
+      " 42%|█████████████████████████████████▉                                              | 213/503 [00:45<01:08,  4.21it/s]"
      ]
     },
     {
@@ -276,7 +278,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 83%|██████████████████████████████████████████████████████████████████▎             | 417/503 [01:45<00:30,  2.86it/s]"
+      " 83%|██████████████████████████████████████████████████████████████████▎             | 417/503 [01:30<00:21,  4.01it/s]"
      ]
     },
     {
@@ -290,7 +292,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████| 503/503 [02:05<00:00,  4.01it/s]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████| 503/503 [01:47<00:00,  4.67it/s]\n"
      ]
     },
     {
@@ -821,7 +823,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 65%|███████████████████████████████████████████████████▏                           | 326/503 [00:00<00:00, 647.36it/s]"
+      " 46%|████████████████████████████████████▎                                          | 231/503 [00:00<00:00, 436.98it/s]"
      ]
     },
     {
@@ -836,7 +838,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████████| 503/503 [00:00<00:00, 615.64it/s]"
+      "100%|███████████████████████████████████████████████████████████████████████████████| 503/503 [00:01<00:00, 441.58it/s]"
      ]
     },
     {
