--- a/download_text_files.ipynb
+++ b/download_text_files.ipynb
@@ -329,7 +329,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████████| 503/503 [00:02<00:00, 187.25it/s]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████| 503/503 [00:05<00:00, 85.82it/s]\n"
      ]
     }
    ],
@@ -395,10 +395,10 @@
      "output_type": "stream",
      "text": [
       "Cannot find path for  7  tickers:\n",
-      " {'BF.B', 'WBD', 'BRK.B', 'GEHC', 'ELV', 'FRC', 'SBNY'}\n",
+      " {'FRC', 'ELV', 'GEHC', 'SBNY', 'BF.B', 'WBD', 'BRK.B'}\n",
       "\n",
       "Cannot find company name in 10-Ks of  47  tickers:\n",
-      " {'WY', 'IP', 'DE', 'ALL', 'ON', 'PM', 'CAT', 'MU', 'C', 'GM', 'KEY', 'IPG', 'F', 'WELL', 'NOW', 'CF', 'CMG', 'MA', 'O', 'MCO', 'RF', 'FAST', 'ICE', 'MET', 'ZION', 'BK', 'FE', 'PEAK', 'MS', 'J', 'BA', 'GEN', 'CB', 'NI', 'BIO', 'IT', 'WM', 'ESS', 'IR', 'META', 'D', 'L', 'A', 'SWK', 'HST', 'DRI', 'TECH'}\n"
+      " {'IP', 'META', 'TECH', 'WM', 'L', 'FE', 'MU', 'NOW', 'D', 'GM', 'DRI', 'BA', 'WELL', 'CAT', 'CMG', 'MET', 'O', 'WY', 'C', 'KEY', 'BIO', 'ON', 'J', 'MCO', 'ALL', 'F', 'SWK', 'HST', 'BK', 'NI', 'CF', 'PEAK', 'MS', 'RF', 'CB', 'DE', 'ICE', 'IR', 'FAST', 'ZION', 'PM', 'ESS', 'A', 'IPG', 'GEN', 'MA', 'IT'}\n"
      ]
     }
    ],
@@ -458,7 +458,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████| 54/54 [00:00<00:00, 54.32it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████████| 54/54 [00:02<00:00, 21.46it/s]\n"
      ]
     }
    ],
