--- a/report.ipynb
+++ b/report.ipynb
@@ -28,6 +28,7 @@
    "cell_type": "markdown",
    "id": "f87a6471-7bd2-4bcd-8022-e3cadd121b25",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -67,21 +68,6 @@
     "# Load in dataset\n",
     "df = pd.read_csv(df_path)\n",
     "df_sents = df.filter(regex='^.*_(posi|nega)tive$|^ret_t.*$', axis=1)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "78ba10b0-1008-4133-bc9d-a229e7ff9003",
-   "metadata": {},
-   "source": [
-    "## TODOs\n",
-    "\n",
-    "Code\n",
-    "- remove todos\n",
-    "- check spelling\n",
-    "- add to readme\n",
-    "- add explanation to data README and tell them to check there\n",
-    "- abstract\n"
    ]
   },
   {
@@ -2353,7 +2339,7 @@
        "  <th>Date:</th>             <td>Fri, 24 Mar 2023</td> <th>  Prob (F-statistic):</th>  <td> 0.455</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>14:22:26</td>     <th>  Log-Likelihood:    </th> <td> -1047.3</td>\n",
+       "  <th>Time:</th>                 <td>15:15:19</td>     <th>  Log-Likelihood:    </th> <td> -1047.3</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>   497</td>      <th>  AIC:               </th> <td>   2117.</td>\n",
@@ -2430,7 +2416,7 @@
        "Model:                            OLS   Adj. R-squared:                 -0.000\n",
        "Method:                 Least Squares   F-statistic:                    0.9849\n",
        "Date:                Fri, 24 Mar 2023   Prob (F-statistic):              0.455\n",
-       "Time:                        14:22:26   Log-Likelihood:                -1047.3\n",
+       "Time:                        15:15:19   Log-Likelihood:                -1047.3\n",
        "No. Observations:                 497   AIC:                             2117.\n",
        "Df Residuals:                     486   BIC:                             2163.\n",
        "Df Model:                          10                                         \n",
