Minor spelling and title change

--- a/report.ipynb
+++ b/report.ipynb
@@ -7,7 +7,7 @@
     "tags": []
    },
    "source": [
-    "# 10-K Sentiment Analysis for S&P500 Stocks in 2022\n",
+    "# 10-K Insights: Sentiment Analysis and Stock Returns for S&P500 Stocks in 2022\n",
     "\n",
     "Nicole ElChaar, FIN377, Spring 2023"
    ]
@@ -22,7 +22,9 @@
    "source": [
     "## Summary\n",
     "\n",
-    "In this analysis, we explore whether 10-K filings contain value-relevant information in the sentiment of the text.  We examine the relationships between sentiments found in 10-K filings and returns following the 10-K's release using two valence-based dictionaries and three topic-based schemes (with financial stability, corporate governance, and e-commerce themes).  We find higher absolute correlations for positive sentiments in general, with the largest magnitudes for positive e-commerce topics, positive LM sentiment, negative LM sentiment, and positive financial stability topics."
+    "10-K filings are a rich source of information for investors and are expected to be objective and factual.  In this analysis, we explore whether 10-K filings implicitly contain value-relevant information in the sentiment of the text.\n",
+    "\n",
+    "We examine the relationships between sentiments found in 10-K filings and returns following the 10-K's release using two valence-based dictionaries and three topic-based schemes (with financial stability, corporate governance, and e-commerce themes).  We find higher absolute correlations for positive sentiments in general, with the largest magnitudes for positive e-commerce topics, positive LM sentiment, negative LM sentiment, and positive financial stability topics."
    ]
   },
   {
@@ -86,7 +88,7 @@
    "source": [
     "### The Sample\n",
     "\n",
-    "This exploration is limited to a set of S&P500 stocks in the first quarter of 2023.  The final output is *ouput/analysis_sample.csv*, where each observance is a ticker in the S&P500.  Columns include:\n",
+    "This exploration is limited to a set of S&P500 stocks in the first quarter of 2023.  The final output is *output/analysis_sample.csv*, where each observance is a ticker in the S&P500.  Columns include:\n",
     "\n",
     "1. the return from the day of the company's 10-K release to two days following the 10-K's release\n",
     "1. the return from three days following the company's 10-K release to ten days following the 10-K's release\n",
@@ -392,7 +394,7 @@
     "\n",
     "- Positive Financial Stability is also found in every sector and is most present in Consumer Staples, Industrials, and Financials.\n",
     "\n",
-    "- Negative Financial Stability is found in every sector and are most present in the Financials sector.  In Financials, these topics are found in ~0.3% of each 10-K on average.\n",
+    "- Negative Financial Stability is found in every sector and are most present in Financials.  In Financials, these topics are found in ~0.3% of each 10-K on average.\n",
     "\n",
     "- Positive Corporate Governance is found very evenly across all sectors with very low presence overall.\n",
     "\n",
@@ -2149,7 +2151,7 @@
     "df_sent_rets = df_sent_rets \\\n",
     "        .rename(columns=lambda x: re.sub('^(.*_(posi|nega)tive)$',r'score+\\1',x))\n",
     "\n",
-    "# Combine all setiments into long columns\n",
+    "# Combine all sentiments into long columns\n",
     "df_sent_rets_longer = pd.wide_to_long(\n",
     "        df_sent_rets,\n",
     "        stubnames=['score'],\n",
